# vestige

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  server.json
.github/workflows/: pages.yml
agents/: executioner.md  synthesis-composer.md
apps/dashboard/: .env.example  package-lock.json  package.json
apps/dashboard/src/lib/components/: InsightToast.svelte  VerdictBar.svelte
apps/dashboard/src/lib/components/__tests__/: PatternTransferHeatmap.test.ts
apps/dashboard/src/lib/graph/: nodes.ts
apps/dashboard/src/lib/stores/: api.ts  toast.ts  websocket.ts
apps/dashboard/src/lib/types/: index.ts
apps/dashboard/src/routes/: +layout.svelte
apps/dashboard/src/routes/(app)/contradictions/: +page.svelte
apps/dashboard/src/routes/(app)/duplicates/: +page.svelte
apps/dashboard/src/routes/(app)/patterns/: +page.svelte
apps/dashboard/src/routes/(app)/reasoning/: +page.svelte
apps/dashboard/src/routes/waitlist/: +page.svelte
crates/vestige-core/: Cargo.toml
crates/vestige-core/src/: fts.rs  lib.rs
crates/vestige-core/src/advanced/: adaptive_embedding.rs
crates/vestige-core/src/embeddings/: local.rs  mod.rs
crates/vestige-core/src/memory/: mod.rs
crates/vestige-core/src/search/: vector.rs
crates/vestige-core/src/storage/: migrations.rs  sqlite.rs
crates/vestige-mcp/: Cargo.toml
crates/vestige-mcp/src/: autopilot.rs  server.rs
crates/vestige-mcp/src/dashboard/: events.rs  handlers.rs  mod.rs
crates/vestige-mcp/src/protocol/: messages.rs
crates/vestige-mcp/src/tools/: contradictions.rs  cross_reference.rs  dedup.rs  maintenance.rs  memory_unified.rs  mod.rs  search_unified.rs  session_context.rs
docs/: COGNITIVE_SANDWICH.md  CONFIGURATION.md  FAQ.md  LAUNCH_STATS.md  STORAGE.md  VESTIGE_STATE_AND_PLAN.md  comparison.md
docs/integrations/: windsurf.md  xcode.md
docs/launch/: blog-post.md  demo-script.md  receipt-lock.md  reddit-cross-reference.md  show-hn.md
docs/marketing/: LAUNCH_NOW.md  README.md  demo-video-storyboard.md  mcp-registries.md  metrics-tracker.md  wave-a-launch.md  wave-b-launch.md
docs/marketing/assets/: CAPTURE.md
docs/marketing/growth-engine/: MARKETING-CLAUDE.md  README.md
docs/marketing/ready-to-post/: hn-first-comment.txt  hn-title.txt  reddit-experienceddevs-title.txt  reddit-experienceddevs.md  x-thread.txt
docs/website/: index.html
hooks/: load-all-memory.sh  sanhedrin-local.py  sanhedrin.sh  sanhedrin_core.py  settings.fragment.json  settings.sanhedrin.fragment.json  synthesis-gate.sh  synthesis-preflight.sh  synthesis-stop-validator.sh
scripts/: check-sandwich-prereqs.sh  install-sandwich.sh
scripts/marketing/: preflight.sh  seed-baseline-memories.sh  setup-marketing-instance.sh
tests/hooks/: test_sanhedrin_claim_mode.py
